# link_shortener

./: Cargo.toml  docker-compose.yaml
migrations/: 20250125161821_links.down.sql  20250125161821_links.up.sql
src/: main.rs  routes.rs  utils.rs
