[package]
name = "link_shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-prometheus = "0.8.0"
dotenvy = "0.15.7"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
